--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>Table</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="assets/css/datatables.css">
-    <link rel="stylesheet" href="assets/css/datatables-responsive.css">
+    <link rel="stylesheet" href="assets/css/dataTables.bootstrap5.css">
+    <link rel="stylesheet" href="assets/css/responsive.bootstrap5.css">
     <link rel="stylesheet" href="assets/css/toaster.css">
-    <link rel="stylesheet" href="assets/css/buttons.datatables.css">
+    <link rel="stylesheet" href="assets/css/buttons.bootstrap5.css">
+    <link rel="stylesheet" href="assets/css/bootstrap-icons.min.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary flex-column py-2">
@@ -158,18 +159,19 @@
     
     <script src="assets/js/jquery.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/datatables.js"></script>
-    <script src="assets/js/datatables-bootstrap.js"></script>
-    <script src="assets/js/datatable-responsive.js"></script>
-    <script src="assets/js/responsive-bootstrap.js"></script>
+    <script src="assets/js/dataTables.js"></script>
+    <script src="assets/js/dataTables.bootstrap5.js"></script>
+    <script src="assets/js/dataTables.responsive.js"></script>
+    <script src="assets/js/responsive.bootstrap5.js"></script>
     <script src="assets/js/toaster.js"></script>
-    <script src="assets/js/datatables.buttons.js"></script>
-    <script src="assets/js/buttons.datatables.js"></script>
-    <script src="assets/js/jszip.js"></script>
-    <script src="assets/js/pdfmake.js"></script>
-    <script src="assets/js/vfsfonts.js"></script>
-    <script src="assets/js/buttons.html5.js"></script>
-    <script src="assets/js/buttons.print.js"></script>
+    <script src="assets/js/dataTables.buttons.js"></script>
+    <script src="assets/js/buttons.bootstrap5.js"></script>
+    <script src="assets/js/jszip.min.js"></script>
+    <script src="assets/js/pdfmake.min.js"></script>
+    <script src="assets/js/vfs_fonts.js"></script>
+    <script src="assets/js/buttons.html5.min.js"></script>
+    <script src="assets/js/buttons.print.min.js"></script>
+    <script src="assets/js/xlsx.full.min.js"></script>
     <script type="module" src="script.js"></script>
 </body>
 </html>
