--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap-icons.min.css">
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary flex-column py-2">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary flex-column p-3">
         <div class="container-fluid">
     
             <a class="navbar-brand" id="pageTitle" data-i18n="pageTitle">
