--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="modalTitle" data-i18n="addEmployee"></h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" data-i18n=""></button>
                 </div>
                 <div class="modal-body">
                     <form id="empForm" novalidate>
