--- a/details.html
+++ b/details.html
@@ -61,7 +61,7 @@
     </div>
 
 
-
+    <footer id="footer"></footer>
 
     <script type="module" src="detailsScript.js"></script>
     <script src="assets/js/jquery.js"></script>
