--- a/index.html
+++ b/index.html
@@ -164,6 +164,8 @@
         </div>
     </div>
 
+    <footer id="footer"></footer>
+
     
     <script src="assets/js/jquery.js"></script>
     <script src="assets/js/bootstrap.bundle.min.js"></script>
