--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     <header id="header"></header>
     <div class="container p-3 my-5 bg-light border border-primary">
         <div>
-            <button id="addBtn" class="btn btn-primary mb-3"></button>
+            <button id="addBtn" class="btn btn-primary mb-3">
+                <i class="bi bi-person-plus-fill m-1"></i>
+                <span data-i18n="addEmployee"></span>
+            </button>
         </div>
         <table id="employeesTable" class="table table-bordered nowrap">
             
@@ -122,7 +125,6 @@
                         <button class="btn btn-secondary" data-bs-dismiss="modal" data-i18n="cancel">Cancel</button>
                         <button id="btnSave" class="btn btn-primary" data-i18n="save">Save</button>
                     </div>
-
             </div>
         </div>
     </div>
